 * Fix a bug in handling of bold text starting a list item
   (GitHub's #447). Thanks Jean-Noël Avila for the pull request.
 * Fix handling of linebreaks in lists (GitHub's #444). Thanks
   Jean-Noël Avila for the pull request.

Tex:
 * Allow verbatim environment declaration without trailing space
   (GitHub's #407). Thanks Mayeul Cantan for the report & the fix.

Texinfo:
 * Translate partial menu node names (GitHub's #437) [Apteryks].

Markdown:
 * Treat link reference definitions as no-wrap (GitHub's #422) [gemmaro].
 * Don't emit a warning when provided an empty tag list in YFM
   (GitHub's #426) [Martin].

YAML:
 * Verbosely fail on inline lists and dictionaries, as YAML::Tiny does not
   handle them as lists or dicts anyway. Do quote list-looking strings
   (GitHub's #439) [Martin & gemmaro].

General:
 * Don't fail on empty po files, e.g. adoc files containing only
   includes. Thanks Suddenfall for the report & fix (GitHub's #408).
 * Fix an encoding error in one file which resulted in build errors
   with new gettext versions (GitHub's #428).
   Thanks to Jan Palus for the issue report and the fix.
 * Use the semantic of Perl v5.12 (released in 2012) instead of the previously
   requested one (v5.6 release in 2000). This is to request the unicode_strings
   feature, making the utf strings more predictable.

po4a main script (the deprecated po4a-* scripts are still buggy):
 * Deal properly with CRLF files coming from windows (GitHub's #409).
 * Allow to escape spaces in file names, or to quote them (GitHub's #412).

po4a-translate:
 * Remove the wrap-po option that was not used internally.

Build scripts:
 * Use xmlcatalog(1) to find DocBook XSL file (GitHub's #431).

Translations:
 * Updated: Chinese (traditional), thanks Haowei Hsu.
 * Updated: French, thanks Jérémie Tarot.
 * Updated: German, thanks Helge Kreutzmann.
 * Updated: Japanese, thanks gemmaro.
 * Updated: Norwegian Bokmål, thanks Allan Nordhøy and Petter Reinholdtsen.