@@ -947,6 +947,12 @@ t/fmt/tex/basic.pot
 t/fmt/tex/basic.tex
 t/fmt/tex/basic.trans
 t/fmt/tex/basic.trans.stderr
+t/fmt/tex/input-in-verbatim.norm
+t/fmt/tex/input-in-verbatim.po
+t/fmt/tex/input-in-verbatim.pot
+t/fmt/tex/input-in-verbatim.stderr-without-ignore
+t/fmt/tex/input-in-verbatim.tex
+t/fmt/tex/input-in-verbatim.trans
 t/fmt/texinfo/comments.norm
 t/fmt/texinfo/comments.po
 t/fmt/texinfo/comments.pot
