@@ -18,5 +18,20 @@ foreach my $t (qw(basic theorem)) {
       };
 }
 
+push @tests,
+  {
+    'doc'         => 'invalid input command, without ignore',
+    'format'      => 'latex',
+    'input'       => "fmt/tex/input-in-verbatim.tex",
+    'error'       => 1,
+    'norm_stderr' => 'fmt/tex/input-in-verbatim.stderr-without-ignore',
+  },
+  {
+    'doc'     => 'invalid input command, with exclude_include',
+    'format'  => 'latex',
+    'input'   => "fmt/tex/input-in-verbatim.tex",
+    'options' => '-o exclude_include=main.tex'
+  };
+
 run_all_tests(@tests);
 0;
