@@ -1,0 +1,11 @@
+% This file was generated with po4a. Translate the source file.
+%
+\documentclass[12pt]{article}
+\begin{document}
+
+\begin{verbatim}
+\documentclass[ignorenonframetext]{beamer}
+\input{main.tex}
+\end{verbatim}
+
+\end{document}
