@@ -1,0 +1,1 @@
+po4a::tex: Cannot find 'main.tex' with kpsewhich. To prevent this file to be included, add '-o exclude_include=main.tex' to the options, either on the command line or in your po4a.conf file.
