@@ -1,0 +1,9 @@
+\documentclass[12pt]{article}
+\begin{document}
+
+\begin{verbatim}
+\documentclass[ignorenonframetext]{beamer}
+\input{main.tex}
+\end{verbatim}
+
+\end{document}
