@@ -38,6 +38,8 @@ Asciidoc:
 Tex:
  * Allow verbatim environment declaration without trailing space
    (GitHub's #407). Thanks Mayeul Cantan for the report & the fix.
+ * Informative error message when file not found for \input, indicating
+   how to skip this include (GitHub's #421) [mquinson].
 
 Texinfo:
  * Translate partial menu node names (GitHub's #437) [Apteryks].
